tests/ui/traits/next-solver/alias-bound-unsound.stderr
error[E0275]: overflow evaluating the requirement `String: Copy`
  --> $DIR/alias-bound-unsound.rs:22:38
   |
LL |     type Item = String where String: Copy;
   |                                      ^^^^
   |
note: the requirement `String: Copy` appears on the `impl`'s associated type `Item` but not on the corresponding trait's associated type
  --> $DIR/alias-bound-unsound.rs:12:10
   |
LL | trait Foo {
   |       --- in this trait
LL |     type Item: Copy
   |          ^^^^ this trait's associated type doesn't have the requirement `String: Copy`

error[E0271]: type mismatch resolving `<() as Foo>::Item normalizes-to String`
  --> $DIR/alias-bound-unsound.rs:28:43
   |
LL |     let _ = identity(<() as Foo>::copy_me(&x));
   |                                           ^^ types differ
   |
note: required by a bound in `Foo::Item`
  --> $DIR/alias-bound-unsound.rs:14:30
   |
LL |     type Item: Copy
   |          ---- required by a bound in this associated type
LL |     where
LL |         <Self as Foo>::Item: Copy;
   |                              ^^^^ required by this bound in `Foo::Item`

error[E0308]: mismatched types
  --> $DIR/alias-bound-unsound.rs:28:43
   |
LL |     let _ = identity(<() as Foo>::copy_me(&x));
   |                      -------------------- ^^ types differ
   |                      |
   |                      arguments to this function are incorrect
   |
   = note: expected reference `&<() as Foo>::Item`
              found reference `&String`
note: associated function defined here
  --> $DIR/alias-bound-unsound.rs:16:8
   |
LL |     fn copy_me(x: &Self::Item) -> Self::Item {
   |        ^^^^^^^ --------------

error[E0271]: type mismatch resolving `<() as Foo>::Item normalizes-to String`
  --> $DIR/alias-bound-unsound.rs:28:22
   |
LL |     let _ = identity(<() as Foo>::copy_me(&x));
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^ types differ
   |
note: required by a bound in `Foo::Item`
  --> $DIR/alias-bound-unsound.rs:14:30
   |
LL |     type Item: Copy
   |          ---- required by a bound in this associated type
LL |     where
LL |         <Self as Foo>::Item: Copy;
   |                              ^^^^ required by this bound in `Foo::Item`

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0271, E0275, E0308.
For more information about an error, try `rustc --explain E0271`.
